--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,23 @@
+#
+# circle.yml
+#
+# Copyright (c) 2017 Junpei Kawamoto
+#
+# This file is part of simple-kvs.
+#
+# simple-kvs is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# simple-kvs is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with simple-kvs.  If not, see <http://www.gnu.org/licenses/>.
+#
 machine:
   services:
     - docker
@@ -11,11 +31,12 @@ dependencies:
 compile:
   override:
     - cd server && go build -o kvs-server
+    - docker build --rm=false -t itslabq/simple-kvs -f dockerfile/Dockerfile .
 
 test:
-  post:
-    - docker info
-    - docker build --rm=false -t itslabq/simple-kvs -f dockerfile/Dockerfile .
+  override:
+    - make test
+    - ./docker-test.sh
 
 deployment:
   hub:
