--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,3 +9,7 @@ commit = True
 [bumpversion:file:server/version.go]
 
 [bumpversion:file:docs/content/index.md]
+
+[bumpversion:file:docs/content/client.md]
+
+[bumpversion:file:docs/content/server.md]
