--- a/docs/config.toml
+++ b/docs/config.toml
@@ -15,6 +15,8 @@ googleAnalytics = "UA-89247555-1"
 	github_repo   = "simple-kvs"
 	github_banner = true
 
+	addthis = "ra-585b3ef9cae64e1e"
+
 	custom_css = []
 	custom_js  = []
 
